adding handel repository services
